fix: deprecated URL instantiation